--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,14 +119,6 @@ docs = [
     "numpydoc>=1.5.0",
     "sphinx-design>=0.5.0",
 ]
-dev = [
-    "pytest",
-    "pytest-cov",
-    "coverage",
-    "ipython",
-    "ipdb",
-    "virtualenv",
-]
 lint = [
     "ruff",
 ]
@@ -203,3 +195,15 @@ show_missing = true
 skip_covered = true
 skip_empty = true
 sort = "Name"
+
+[dependency-groups]
+dev = [
+    "pytest",
+    "pytest-cov",
+    "coverage",
+    "ipython",
+    "ipdb",
+    "virtualenv",
+    "pytest-asyncio>=1.3.0",
+    "pytest-mock>=3.15.1",
+]
