--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ classifiers = [
         "Programming Language :: Python :: 3.11",
         "Programming Language :: Python :: 3.12",
         "Programming Language :: Python :: 3.13",
-        "Development Status :: 5 - Production/Stable",
+        "Development Status :: 4 - Beta",
         "Operating System :: POSIX :: Linux",
         "Operating System :: MacOS",
         "Operating System :: Microsoft :: Windows",
@@ -127,6 +127,52 @@ test = [
     "pytest",
     "pytest-cov",
 ]
+
+[tool.ruff]
+target-version = "py313"
+lint.select = [
+    # https://beta.ruff.rs/docs/rules/
+    "A", # do not shadow bultins - TODO
+    "B",  # flake8-bugbear
+    "C",
+    "E",
+    "F",
+    "I",  # isort
+    "W",  # pycodestyle
+    "N",  # pep8 naming
+    "C4", # list comprehensions
+    "T20", # print()
+    "PTH", # use-pathlib - todo
+]
+lint.ignore = ["N802", "F841"]
+line-length = 120
+
+[tool.ruff.format]
+line-ending = "lf"
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = [
+    # imported but unused
+    "F401",
+    # E402 Module level import not at top of file
+    "E402",
+]
+
+"bin/**/*.py" = [
+    # print()
+    "T201",
+]
+
+"main.py" = [
+    "B008" # the typer.Option() as default arg
+]
+
+[tool.ruff.lint.isort]
+order-by-type = true
+combine-as-imports = true
+force-wrap-aliases = true
+known-first-party = ["financial_services_register_api"]
+forced-separate = ["tests"]
 
 [tool.pdm.scripts]
 lint = {shell = "make lint", help = "Lint source with Ruff"}
