--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,7 @@ distribution = true
 [tool.pdm.build]
 package-dir = "src"
 includes = [
-    "src/financial_services_register_api",
+    "src/fca_api",
 ]
 # File patterns to exclude, the paths are relative to the project root.
 excludes = [
@@ -172,7 +172,7 @@ line-ending = "lf"
 order-by-type = true
 combine-as-imports = true
 force-wrap-aliases = true
-known-first-party = ["financial_services_register_api"]
+known-first-party = ["fca_api"]
 forced-separate = ["tests"]
 
 [tool.pdm.scripts]
@@ -182,7 +182,7 @@ unittests = {shell = "make unittests", help = "Run unit tests & measure coverage
 
 [tool.pdm.version]
 source = "file"
-path = "src/financial_services_register_api/__version__.py"
+path = "src/fca_api/__version__.py"
 
 # For ``pytest`` configuration, including TOML-specific configuration see:
 #
@@ -247,9 +247,6 @@ sort = "Name"
 dev = [
     "pytest",
     "pytest-cov",
-    "coverage",
-    "ipython",
-    "ipdb",
     "virtualenv",
     "pytest-asyncio>=1.3.0",
     "pytest-mock>=3.15.1",
