--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
       with:
-        slug: sr-murthy/financial_services_register_api
+        slug: release-art/fca_api
         files: ./coverage.xml
         flags: unit
         verbose: true
