--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,33 +19,37 @@ jobs:
         run: |
           python -m pip install pdm
           pdm config global.use_venv false
-          pdm build
       - name: Build packages
-        run: python -m build --outdir dist/
+        run: pdm build
       - name: Publish distribution to Test PyPI
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
-      # - name: Publish distribution to PRODUCTION PyPI
-      #   # if: false
-      #   uses: pypa/gh-action-pypi-publish@master
-      #   with:
-      #     password: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          pdm publish --no-build
+        env:
+          PDM_PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          PDM_PUBLISH_USERNAME: '__token__'
+          PDM_PUBLISH_REPO: 'https://test.pypi.org/legacy/'
+      - name: Publish distribution to PRODUCTION PyPI
+        # if: false
+        run: |
+          pdm publish --no-build
+        env:
+          PDM_PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          PDM_PUBLISH_USERNAME: '__token__'
+          PDM_PUBLISH_REPO: 'https://test.pypi.org/legacy/'
   bump-version: # Bump version for the next release
     needs: publish
     runs-on: ubuntu-latest
     # Bump version in the PR that targets the "main" branch
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v6
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v6∂
       - name: Install dependencies
         run: |
-          pip install bump2version
+          python -m pip install pdm
       - name: Bump version
         run: |
           git config --global user.email "github+actions@gmail.com"
           git config --global user.name "Actions"
-          bump2version patch
+          pdm bump patch
           git push --follow-tags
