--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           pdm publish --no-build
         env:
-          PDM_PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          PDM_PUBLISH_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
           PDM_PUBLISH_USERNAME: '__token__'
           PDM_PUBLISH_REPO: 'https://test.pypi.org/legacy/'
       - name: Publish distribution to PRODUCTION PyPI
@@ -32,7 +32,7 @@ jobs:
         run: |
           pdm publish --no-build
         env:
-          PDM_PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          PDM_PUBLISH_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
           PDM_PUBLISH_USERNAME: '__token__'
           PDM_PUBLISH_REPO: 'https://test.pypi.org/legacy/'
   bump-version: # Bump version for the next release
