--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v6
       - name: Set up Python
         uses: actions/setup-python@v6
+        with:
+          python-version: ${{ variables.DEFAULT_PYTHON_VERSION }}
       - name: Install dependencies
         run: |
           python -m pip install pdm
@@ -27,14 +29,13 @@ jobs:
           PDM_PUBLISH_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
           PDM_PUBLISH_USERNAME: '__token__'
           PDM_PUBLISH_REPO: 'https://test.pypi.org/legacy/'
-      - name: Publish distribution to PRODUCTION PyPI
-        # if: false
-        run: |
-          pdm publish --no-build
-        env:
-          PDM_PUBLISH_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-          PDM_PUBLISH_USERNAME: '__token__'
-          PDM_PUBLISH_REPO: 'https://test.pypi.org/legacy/'
+      # - name: Publish distribution to PRODUCTION PyPI
+      #   # if: false
+      #   run: |
+      #     pdm publish --no-build
+      #   env:
+      #     PDM_PUBLISH_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+      #     PDM_PUBLISH_USERNAME: '__token__'
   bump-version: # Bump version for the next release
     needs: publish
     runs-on: ubuntu-latest
@@ -42,7 +43,9 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - name: Set up Python
-        uses: actions/setup-python@v6∂
+        uses: actions/setup-python@v6
+        with:
+          python-version: ${{ variables.DEFAULT_PYTHON_VERSION }}
       - name: Install dependencies
         run: |
           python -m pip install pdm
