--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: ${{ github.DEFAULT_PYTHON_VERSION }}
+          python-version: ${{ env.DEFAULT_PYTHON_VERSION }}
       - name: Install dependencies
         run: |
           python -m pip install pdm
@@ -45,7 +45,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: ${{ github.DEFAULT_PYTHON_VERSION }}
+          python-version: ${{ env.DEFAULT_PYTHON_VERSION }}
       - name: Install dependencies
         run: |
           python -m pip install pdm
