--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install pdm
+          pdm self add pdm-bump
       - name: Bump version
         run: |
           git config --global user.email "github+actions@gmail.com"
