--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,13 +20,13 @@ jobs:
           python -m pip install pdm
       - name: Build packages
         run: pdm build
-      - name: Publish distribution to Test PyPI
-        run: |
-          pdm publish --no-build
-        env:
-          PDM_PUBLISH_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          PDM_PUBLISH_USERNAME: '__token__'
-          PDM_PUBLISH_REPO: 'https://test.pypi.org/legacy/'
+      # - name: Publish distribution to Test PyPI
+      #   run: |
+      #     pdm publish --no-build
+      #   env:
+      #     PDM_PUBLISH_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
+      #     PDM_PUBLISH_USERNAME: '__token__'
+      #     PDM_PUBLISH_REPO: 'https://test.pypi.org/legacy/'
       # - name: Publish distribution to PRODUCTION PyPI
       #   # if: false
       #   run: |
