--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/python,windows,linux,osx,visualstudiocode
 
 .vscode/
+_sphinx_build/
