--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,10 +22,11 @@ jobs:
         uses: actions/setup-python@v6
       - name: Install dependencies
         run: |
-          python -m pip install sphinx sphinx_rtd_theme myst_parser
+          python -m pip install pdm
+          pdm install -G docs
       - name: Sphinx build
         run: |
-          sphinx-build docs _sphinx_build
+          pdm run sphinx-build docs _sphinx_build
       - name: Deploy Docs to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
