--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,19 +107,6 @@ build = [
     "pip>=23.1.2",
     "twine",
 ]
-docs = [
-    "myst-parser",
-    "furo==2024.04.27",
-    "Sphinx",
-    "sphinx-autobuild",
-    "sphinx-copybutton",
-    "pylint>=2.17.5",
-    "nb2plots>=0.7.1",
-    "sphinx-gallery>=0.14.0",
-    "jupyter-sphinx>=0.4.0",
-    "numpydoc>=1.5.0",
-    "sphinx-design>=0.5.0",
-]
 lint = [
     "ruff",
 ]
@@ -248,5 +235,19 @@ dev = [
     "pytest-cov",
     "virtualenv",
     "pytest-asyncio>=1.3.0",
-    "pytest-mock>=3.15.1",
+    "pytest-mock>=3.15.1"
+]
+docs = [
+    "myst-parser>=4.0.1",
+    "furo==2024.04.27",
+    "sphinx>=7.4.7",
+    "sphinx-autobuild",
+    "sphinx-copybutton",
+    "pylint>=2.17.5",
+    "nb2plots>=0.7.1",
+    "sphinx-gallery>=0.14.0",
+    "jupyter-sphinx>=0.4.0",
+    "numpydoc>=1.5.0",
+    "sphinx-design>=0.5.0",
+    "sphinx-rtd-theme>=3.0.2",
 ]
