--- a/.gitignore
+++ b/.gitignore
@@ -265,4 +265,5 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/python,windows,linux,osx,visualstudiocode
 
 .vscode/
-_sphinx_build/
+.pdm-python
+.pdm-build
