--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,6 @@ classifiers = [
 
 [project.optional-dependencies]
 user = [
-    "jupyter",
 ]
 
 [build-system]
@@ -163,6 +162,7 @@ known-first-party = ["fca_api"]
 forced-separate = ["tests"]
 
 [tool.pdm.scripts]
+doc = {shell = "make doc", help="Build sphynx docs"}
 lint = {shell = "make lint", help = "Lint source with Ruff"}
 unittests = {shell = "make unittests", help = "Run unit tests & measure coverage"}
 
@@ -239,15 +239,9 @@ dev = [
 ]
 docs = [
     "myst-parser>=4.0.1",
-    "furo==2024.04.27",
     "sphinx>=7.4.7",
     "sphinx-autobuild",
     "sphinx-copybutton",
-    "pylint>=2.17.5",
-    "nb2plots>=0.7.1",
-    "sphinx-gallery>=0.14.0",
-    "jupyter-sphinx>=0.4.0",
-    "numpydoc>=1.5.0",
-    "sphinx-design>=0.5.0",
     "sphinx-rtd-theme>=3.0.2",
+    "sphinx-design>=0.6.1",
 ]
