ok, it should compile now

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,9 +8,8 @@ on:
   workflow_dispatch: {}
 
 permissions:
-  # Give the default GITHUB_TOKEN write permission to commit and push the
-  # added or changed files to the repository.
-  contents: write
+  contents: write # allow pushing code changes
+  pages: write # allow publishing to GitHub Pages
 
 jobs:
   docs:
