--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ on:
 permissions:
   contents: write # allow pushing code changes
   pages: write # allow publishing to GitHub Pages
+  id-token: write 
 
 jobs:
   docs:
