--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dynamic = ["version"]
 
 requires-python = ">=3.11"
 
-license = {file = "LICENSE"}
+license = "MPL-2.0"
 
 dependencies = [
     "httpx>=0.28.1",
