--- a/pyproject.toml
+++ b/pyproject.toml
@@ -242,6 +242,6 @@ docs = [
     "sphinx>=7.4.7",
     "sphinx-autobuild",
     "sphinx-copybutton",
-    "sphinx-rtd-theme>=3.0.2",
     "sphinx-design>=0.6.1",
+    "furo>=2025.12.19",
 ]
