--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ build-backend = "pdm.backend"
 [project.urls]
 Homepage = "https://docs.release.art/fca-api/"
 Documentation = "https://docs.release.art/fca-api/"
-Repository = "https://github.com/release-art/fca-api"
+Repository = "https://github.com/release-art/fca-api/"
 
 # For working with PDM, including configuration and usage see:
 #
@@ -243,5 +243,5 @@ docs = [
     "sphinx-autobuild",
     "sphinx-copybutton",
     "sphinx-design>=0.6.1",
-    "furo>=2025.12.19",
+    "pydata-sphinx-theme>=0.16.1",
 ]
