--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,42 @@ on:
       - completed
   workflow_dispatch: {}
 
+permissions:
+  contents: write # allow pushing code changes
+  pages: write # allow publishing to GitHub Pages
+  id-token: write 
+
 jobs:
+  start:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    runs-on: ubuntu-latest
+    steps: []
+  docs:
+    needs: start
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - name: Set up Python
+        uses: actions/setup-python@v6
+      - name: Install dependencies
+        run: |
+          python -m pip install pdm
+          pdm install -G docs
+      - name: Sphinx build
+        run: |
+          pdm run doc
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v4
+        with:
+          # Upload entire repository
+          path: './dist/docs/html'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
   publish:
-    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    needs: start
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
