--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dynamic = ["version"]
 
 requires-python = ">=3.11"
 
-license = {file = "LICENSE"}
+license = "MPL-2.0"
 
 dependencies = [
     "httpx>=0.28.1",
@@ -60,7 +60,6 @@ classifiers = [
 
 [project.optional-dependencies]
 user = [
-    "jupyter",
 ]
 
 [build-system]
@@ -68,9 +67,9 @@ requires = ["pdm-backend"]
 build-backend = "pdm.backend"
 
 [project.urls]
-Homepage = "https://financial-services-register-api.readthedocs.io/en/latest/"
-Documentation = "https://financial-services-register-api.readthedocs.io/en/latest/"
-Repository = "https://github.com/sr-murthy/financial-services-register-api"
+Homepage = "https://docs.release.art/fca-api/"
+Documentation = "https://docs.release.art/fca-api/"
+Repository = "https://github.com/release-art/fca-api/"
 
 # For working with PDM, including configuration and usage see:
 #
@@ -106,19 +105,6 @@ editable-backend = "path"
 build = [
     "pip>=23.1.2",
     "twine",
-]
-docs = [
-    "myst-parser",
-    "furo==2024.04.27",
-    "Sphinx",
-    "sphinx-autobuild",
-    "sphinx-copybutton",
-    "pylint>=2.17.5",
-    "nb2plots>=0.7.1",
-    "sphinx-gallery>=0.14.0",
-    "jupyter-sphinx>=0.4.0",
-    "numpydoc>=1.5.0",
-    "sphinx-design>=0.5.0",
 ]
 lint = [
     "ruff",
@@ -176,6 +162,7 @@ known-first-party = ["fca_api"]
 forced-separate = ["tests"]
 
 [tool.pdm.scripts]
+doc = {shell = "make doc", help="Build sphynx docs"}
 lint = {shell = "make lint", help = "Lint source with Ruff"}
 unittests = {shell = "make unittests", help = "Run unit tests & measure coverage"}
 
@@ -248,5 +235,13 @@ dev = [
     "pytest-cov",
     "virtualenv",
     "pytest-asyncio>=1.3.0",
-    "pytest-mock>=3.15.1",
+    "pytest-mock>=3.15.1"
+]
+docs = [
+    "myst-parser>=4.0.1",
+    "sphinx>=7.4.7",
+    "sphinx-autobuild",
+    "sphinx-copybutton",
+    "sphinx-design>=0.6.1",
+    "pydata-sphinx-theme>=0.16.1",
 ]
