--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.13"]
+        python-version: ["3.11", "3.13"]
         os: [ubuntu-latest, macos-latest, windows-latest]
         install-via: [pip]
         arch: [x64]
