--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   start:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - name: Start release
@@ -75,6 +75,11 @@ jobs:
     runs-on: ubuntu-latest
     # Bump version in the PR that targets the "main" branch
     steps:
+      - uses: actions/create-github-app-token@v2
+        id: app-token
+        with:
+          app-id: ${{ vars.RELEASE_ART_WORKFLOW_APP_ID }}
+          private-key: ${{ secrets.RELEASE_ART_WORKFLOW_APP_PK }}
       - uses: actions/checkout@v6
         with:
           persist-credentials: true
@@ -89,5 +94,6 @@ jobs:
           pdm bump patch
       - uses: stefanzweifel/git-auto-commit-action@v7
         with:
+          token: ${{ steps.app-token.outputs.token }}
           commit_message: "Bump version for next release"
           create_branch: false
