--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,6 +95,8 @@ jobs:
           pdm bump patch
       - uses: stefanzweifel/git-auto-commit-action@v7
         with:
+          commit_user_name: ${{ steps.app-token.outputs.app-slug }}[bot]
+          commit_user_email: ${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com
           commit_message: |
             Bump version for next release
 
