--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,6 +80,11 @@ jobs:
         with:
           app-id: ${{ vars.RELEASE_ART_WORKFLOW_APP_ID }}
           private-key: ${{ secrets.RELEASE_ART_WORKFLOW_APP_PK }}
+      - name: Get GitHub App User ID
+        id: get-user-id
+        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
       - uses: actions/checkout@v6
         with:
           token: ${{ steps.app-token.outputs.token }}
