--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.11", "3.13"]
+        python-version: ["3.11"]
         os: [ubuntu-latest, macos-latest, windows-latest]
         install-via: [pip]
         arch: [x64]
@@ -67,9 +67,9 @@ jobs:
       uses: actions/cache@v4
       with:
         path: .venv
-        key: venv-${{ runner.os }}-${{ matrix.arch }}-${{ matrix.python-version }}-${{ hashFiles('pdm.lock') }}
+        key: venv-2-${{ runner.os }}-${{ matrix.arch }}-${{ matrix.python-version }}-${{ hashFiles('pdm.lock') }}
         restore-keys: |
-          venv-${{ runner.os }}-${{ matrix.arch }}-${{ matrix.python-version }}-
+          venv-2-${{ runner.os }}-${{ matrix.arch }}-${{ matrix.python-version }}-
 
     - name: Install current PDM via pip
       if: matrix.install-via == 'pip'
