--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,14 +24,14 @@ jobs:
   test:
     env:
       PYTHONDEVMODE: 1
-      API_USERNAME: ${{ secrets.API_USERNAME }}
-      API_KEY: ${{ secrets.API_KEY }}
+      PDM_IGNORE_SAVED_PYTHON: 1
+      PDM_NON_INTERACTIVE: 1
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.13"]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.11", "3.13"]
+        os: [ubuntu-latest] # is windows-latest / macos-latest required?
         install-via: [pip]
         arch: [x64]
         include:
@@ -67,14 +67,15 @@ jobs:
       uses: actions/cache@v4
       with:
         path: .venv
-        key: venv-${{ runner.os }}-${{ matrix.arch }}-${{ matrix.python-version }}-${{ hashFiles('pdm.lock') }}
+        key: venv-3-${{ runner.os }}-${{ matrix.arch }}-${{ matrix.python-version }}-${{ hashFiles('pdm.lock') }}
         restore-keys: |
-          venv-${{ runner.os }}-${{ matrix.arch }}-${{ matrix.python-version }}-
+          venv-3-${{ runner.os }}-${{ matrix.arch }}-${{ matrix.python-version }}-
 
     - name: Install current PDM via pip
       if: matrix.install-via == 'pip'
       run: |
         python -m pip install pdm
+        pdm use python
         pdm info -v
 
     - name: Lint + Run unit & acceptance tests + Measure code coverage
@@ -93,3 +94,4 @@ jobs:
         verbose: true
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        slug: release-art/fca-api
