--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
     types:
       - completed
-  workflow_dispatch: {}
+  # workflow_dispatch: {}
 
 permissions:
   pages: write # allow publishing to GitHub Pages
