--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,27 +48,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - name: Set up Python
-        uses: actions/setup-python@v6
-      - name: Install dependencies
-        run: |
-          python -m pip install pdm
-      - name: Build packages
-        run: pdm build
-      - name: Publish distribution to Test PyPI
-        run: |
-          pdm publish --no-build
-        env:
-          PDM_PUBLISH_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          PDM_PUBLISH_USERNAME: '__token__'
-          PDM_PUBLISH_REPO: 'https://test.pypi.org/legacy/'
-      - name: Publish distribution to PRODUCTION PyPI
-        # if: false
-        run: |
-          pdm publish --no-build
-        env:
-          PDM_PUBLISH_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-          PDM_PUBLISH_USERNAME: '__token__'
+      # - name: Set up Python
+      #   uses: actions/setup-python@v6
+      # - name: Install dependencies
+      #   run: |
+      #     python -m pip install pdm
+      # - name: Build packages
+      #   run: pdm build
+      # - name: Publish distribution to Test PyPI
+      #   run: |
+      #     pdm publish --no-build
+      #   env:
+      #     PDM_PUBLISH_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
+      #     PDM_PUBLISH_USERNAME: '__token__'
+      #     PDM_PUBLISH_REPO: 'https://test.pypi.org/legacy/'
+      # - name: Publish distribution to PRODUCTION PyPI
+      #   # if: false
+      #   run: |
+      #     pdm publish --no-build
+      #   env:
+      #     PDM_PUBLISH_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+      #     PDM_PUBLISH_USERNAME: '__token__'
   bump-version: # Bump version for the next release
     needs: publish
     runs-on: ubuntu-latest
@@ -101,7 +101,7 @@ jobs:
         with:
           commit_user_name: ${{ steps.app-token.outputs.app-slug }}[bot]
           commit_user_email: ${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com
-          commit_message: |
+          commit_message: |-
             Bump version for next release
 
 
